# mcp-bench

./: .gitignore  README.md  benchmark_results_20260307_135239_sub_concrete_2s.json  benchmark_results_20260307_180845_sub_concrete_3s.json  benchmark_results_20260307_203241_tool_concrete_3s.json  benchmark_results_20260307_220251_tool_concrete_2s.json  mcp_servers_info.json  mcp_servers_info.md  pyproject.toml  related_work.md  run_adk_agent.py  run_benchmark.py  todo.md
benchmark/: evaluator.py  results_aggregator.py  results_formatter.py  runner.py
benchmark_results/: benchmark_results_20260307_135239_sub_concrete_2s.json  benchmark_results_20260307_180845_sub_concrete_3s.json  benchmark_results_20260307_203241_tool_concrete_3s.json  benchmark_results_20260307_220251_tool_concrete_2s.json  benchmark_results_20260312_192007_tool_fuzzy_3s.json  benchmark_results_20260312_204923_subagents_fuzzy_3s.json  benchmark_results_20260312_232306_subagents_fuzzy_2s.json  benchmark_results_20260313_110315_tool_fuzzy_2s.json  tool_cache.db
google_adk_agents/: __init__.py  adk_benchmark_config.yaml  adk_benchmark_runner.py  adk_config_loader.py  adk_executor.py  agent_mcp_mapping.py  config.py  content_compression.py  coordinator.py  mcp_to_agent.md  mcp_tools.py  resilient_mcp_toolset.py  server_config.py
google_adk_agents/specialists/: __init__.py  base.py  factory.py
llm/: factory.py  provider.py
mcp_servers/: .gitignore  commands.json  install.sh
synthesis/: benchmark_generator.py
tasks/: multi_2server_cross_agent.json  multi_3server_cross_agent.json  test_task.json
(+3 files in other folders)
